[gd_scene load_steps=15 format=3 uid="uid://dktaxgde2dyvy"]

[ext_resource type="Script" path="res://Scripts/swipe.gd" id="1_etvga"]
[ext_resource type="Texture2D" uid="uid://d12a2p3b2am54" path="res://assets/runes/att_swipe.png" id="2_0iroa"]
[ext_resource type="Texture2D" uid="uid://bxfgamm5g06fa" path="res://assets/tiles/splosion_2.png" id="3_iapkn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j2a4o"]
atlas = ExtResource("2_0iroa")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjoy0"]
atlas = ExtResource("2_0iroa")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lubtc"]
atlas = ExtResource("2_0iroa")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q3y8"]
atlas = ExtResource("2_0iroa")
region = Rect2(300, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_a7ljo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2a4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjoy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lubtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q3y8")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ceuq2"]
size = Vector2(6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdi18"]
atlas = ExtResource("3_iapkn")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jsjf"]
atlas = ExtResource("3_iapkn")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjxs6"]
atlas = ExtResource("3_iapkn")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlg20"]
atlas = ExtResource("3_iapkn")
region = Rect2(60, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_14hin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdi18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jsjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjxs6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlg20")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="swipe" type="CharacterBody2D" groups=["damagable"]]
z_index = 21
z_as_relative = false
script = ExtResource("1_etvga")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.38419e-07, -4.76837e-07)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_a7ljo")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ceuq2")

[node name="sploder" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_14hin")

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sploder_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="sploder" to="." method="_on_sploder_animation_finished"]
